Formatting, fixed links

--- a/notebooks/01.CPU.ipynb
+++ b/notebooks/01.CPU.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```assembly_x86\n",
+    "```c\n",
     "# int main(int argc, char *argv[]) {\n",
     "   push   %rbp\n",
     "   mov    %rsp,%rbp\n",
@@ -107,7 +107,8 @@
     "   mov    %eax,%esi\n",
     "   lea    0x98(%rip),%rdi        # 0x714\n",
     "   mov    $0x0,%eax\n",
-    "   callq  0x520 <printf@plt>\n"
+    "   callq  0x520 <printf@plt>\n",
+    "```\n"
    ]
   },
   {
