--- a/notebooks/02.Docker.ipynb
+++ b/notebooks/02.Docker.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "Загрузка готового образа с DockerHub\n",
     "```console\n",
-    "docker pull tensorflow/tensorflow:2.0.0-py3-jupyter\n",
+    "docker pull tensorflow/tensorflow:2.2.0-py3-jupyter\n",
     "```\n",
     "\n",
     "Список имеющихся образов\n",
@@ -138,7 +138,7 @@
    "source": [
     "# Слои\n",
     "\n",
-    "<img src=\"http://docs.docker.com/storage/storagedriver/images/container-layers.jpg\"/>\n",
+    "<img src=\"https://docs.docker.com/storage/storagedriver/images/overlay_constructs.webp\"/>\n",
     "\n",
     "```console\n",
     "docker history image_name\n",
@@ -147,6 +147,7 @@
     "Например:\n",
     "```console\n",
     "user@ubuntu:~$ docker history telegram\n",
+    "\n",
     "IMAGE               CREATED             CREATED BY                                      SIZE                COMMENT\n",
     "1705d31f665a        3 days ago          /bin/sh -c #(nop)  ENTRYPOINT [\"/home/user/T…   0B                  \n",
     "88d2adb91b00        3 days ago          /bin/sh -c #(nop)  ENV QT_XKB_CONFIG_ROOT=/u…   0B                  \n",
@@ -176,7 +177,7 @@
     "1. Порядок операций в `Dockerfile` имеет значение для кеширования\n",
     "2. Лучше объединять связанные команды в одну\n",
     "\n",
-    "```console\n",
+    "```bash\n",
     "RUN apt update && apt install -y \\\n",
     "    apt-utils \\\n",
     "    software-properties-common \\\n",
