Remove path to JVM

--- a/notebooks/06.PySpark.ipynb
+++ b/notebooks/06.PySpark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "from pyspark.sql import SparkSession\n",
     "from pyspark.sql.functions import year, month, dayofmonth\n",
     "\n",
-    "os.environ[\"JAVA_HOME\"] = \"/home/alex/.jdks/corretto-11.0.17/\""
+    "#os.environ[\"JAVA_HOME\"] = \"/home/alex/.jdks/corretto-11.0.17/\""
    ]
   },
   {
@@ -32,9 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "24/04/26 00:27:53 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "sc = SparkContext(master='local[*]')\n",
     "#sc = SparkContext(master='spark://localhost:7077')"
@@ -49,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +75,7 @@
        "[10, 37, 82, 145, 226, 325, 442, 577, 730, 901]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +117,7 @@
        " '2008-01-10,0']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,25 +141,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2016, 3, 29, 12),\n",
-       " (2008, 10, 18, 8),\n",
-       " (2014, 6, 3, 20),\n",
-       " (2016, 10, 30, 2),\n",
-       " (2011, 7, 28, 30),\n",
-       " (2009, 10, 22, 5),\n",
-       " (2009, 6, 14, 18),\n",
-       " (2008, 8, 1, 22),\n",
-       " (2011, 4, 27, 12),\n",
-       " (2015, 10, 29, 4)]"
+       "[(2011, 1, 28, -1),\n",
+       " (2013, 10, 25, 8),\n",
+       " (2015, 8, 12, 27),\n",
+       " (2013, 7, 20, 15),\n",
+       " (2014, 10, 14, 6),\n",
+       " (2012, 10, 10, 7),\n",
+       " (2016, 10, 21, 2),\n",
+       " (2011, 1, 13, 0),\n",
+       " (2010, 9, 14, 17),\n",
+       " (2013, 6, 22, 25)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,16 +192,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -206,7 +209,7 @@
        " (2015, (1751, 92))]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +240,7 @@
        " (2016, 19.32608695652174)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -440,14 +443,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/alex/venvs/venv_bd/lib/python3.10/site-packages/pyspark/pandas/__init__.py:50: UserWarning: 'PYARROW_IGNORE_TIMEZONE' environment variable was not set. It is required to set this environment variable to '1' in both driver and executor sides if you use pyarrow>=2.0.0. pandas-on-Spark will set it for you but it does not work if there is a Spark context already launched.\n",
+      "/Users/alex/univ/venvs/venv_py/lib/python3.11/site-packages/pyspark/pandas/__init__.py:50: UserWarning: 'PYARROW_IGNORE_TIMEZONE' environment variable was not set. It is required to set this environment variable to '1' in both driver and executor sides if you use pyarrow>=2.0.0. pandas-on-Spark will set it for you but it does not work if there is a Spark context already launched.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -515,7 +518,7 @@
        "463  2013    25"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -527,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -775,6 +778,13 @@
     "m_avg.withColumn('diff', F.abs(m_avg['temp'] - m_avg['month_avg'])) \\\n",
     "     .show(10)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -795,7 +805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
