Fixed zookeeper sandbox cmd

--- a/notebooks/08.ZooKeeper.ipynb
+++ b/notebooks/08.ZooKeeper.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "Запускаем его в `Docker` вместе с `Kafka`:\n",
     "```bash\n",
-    "docker run --name kafka_sandbox -v `pwd`:/course -p 2181:2181 -p 9092:9092 spotify/kafka\n",
+    "docker run --rm -p 2181:2181 zookeeper:3.7.0\n",
     "```"
    ]
   },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ZnodeStat(czxid=29, mzxid=30, ctime=1683186122017, mtime=1683186122019, version=1, cversion=0, aversion=0, ephemeralOwner=0, dataLength=5, numChildren=0, pzxid=29)"
+       "ZnodeStat(czxid=3, mzxid=4, ctime=1714081276621, mtime=1714081276631, version=1, cversion=0, aversion=0, ephemeralOwner=0, dataLength=5, numChildren=0, pzxid=3)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,16 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ZnodeStat(czxid=32, mzxid=33, ctime=1683186189693, mtime=1683186189699, version=1, cversion=0, aversion=0, ephemeralOwner=0, dataLength=11, numChildren=0, pzxid=32)"
+       "ZnodeStat(czxid=6, mzxid=7, ctime=1714081278940, mtime=1714081278951, version=1, cversion=0, aversion=0, ephemeralOwner=0, dataLength=11, numChildren=0, pzxid=6)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,17 +84,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(b'192.168.1.2',\n",
-       " ZnodeStat(czxid=32, mzxid=33, ctime=1683186189693, mtime=1683186189699, version=1, cversion=0, aversion=0, ephemeralOwner=0, dataLength=11, numChildren=0, pzxid=32))"
+       " ZnodeStat(czxid=6, mzxid=7, ctime=1714081278940, mtime=1714081278951, version=1, cversion=0, aversion=0, ephemeralOwner=0, dataLength=11, numChildren=0, pzxid=6))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "'/node/b'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -152,10 +152,10 @@
     {
      "data": {
       "text/plain": [
-       "ZnodeStat(czxid=29, mzxid=34, ctime=1683186122017, mtime=1683186289702, version=2, cversion=0, aversion=0, ephemeralOwner=0, dataLength=6, numChildren=0, pzxid=29)"
+       "ZnodeStat(czxid=3, mzxid=10, ctime=1714081276621, mtime=1714081285987, version=2, cversion=0, aversion=0, ephemeralOwner=0, dataLength=6, numChildren=0, pzxid=3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,17 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "(b'c value',\n",
-       " ZnodeStat(czxid=36, mzxid=36, ctime=1636632805734, mtime=1636632805734, version=0, cversion=0, aversion=0, ephemeralOwner=0, dataLength=7, numChildren=0, pzxid=36))"
+       " ZnodeStat(czxid=11, mzxid=11, ctime=1714081288200, mtime=1714081288200, version=0, cversion=0, aversion=0, ephemeralOwner=0, dataLength=7, numChildren=0, pzxid=11))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,8 @@
       "Thread #0 unlock\n",
       "Thread #1 lock\n",
       "Thread #1 unlock\n",
-      "Thread #2 lock\n"
+      "Thread #2 lock\n",
+      "Thread #2 unlock\n"
      ]
     }
    ],
@@ -248,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -256,9 +257,8 @@
      "output_type": "stream",
      "text": [
       "Election won: 0\n",
-      "Election won: 2\n",
       "Election won: 1\n",
-      "Thread #2 unlock\n"
+      "Election won: 2\n"
      ]
     }
    ],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "b'2'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
        "15"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,10 +368,10 @@
      "data": {
       "text/plain": [
        "(b'115',\n",
-       " ZnodeStat(czxid=39, mzxid=42, ctime=1683186896658, mtime=1683186909395, version=3, cversion=0, aversion=0, ephemeralOwner=0, dataLength=3, numChildren=0, pzxid=39))"
+       " ZnodeStat(czxid=32, mzxid=35, ctime=1714081303031, mtime=1714081305539, version=3, cversion=0, aversion=0, ephemeralOwner=0, dataLength=3, numChildren=0, pzxid=32))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -380,29 +380,23 @@
      "output_type": "stream",
      "text": [
       "Connection dropped: socket connection broken\n",
-      "Transition to CONNECTING\n",
-      "Session has expired\n",
       "Connection dropped: socket connection broken\n",
       "Transition to CONNECTING\n",
-      "Session has expired\n",
-      "Connection dropped: socket connection broken\n",
       "Transition to CONNECTING\n",
-      "Session has expired\n",
-      "Connection dropped: socket connection broken\n",
-      "Transition to CONNECTING\n",
-      "Session has expired\n",
-      "Connection dropped: socket connection broken\n",
-      "Transition to CONNECTING\n",
-      "Session has expired\n",
-      "Connection dropped: socket connection broken\n",
-      "Transition to CONNECTING\n",
-      "Session has expired\n",
-      "Connection dropped: socket connection broken\n",
-      "Transition to CONNECTING\n",
-      "Session has expired\n",
-      "Connection dropped: socket connection broken\n",
-      "Transition to CONNECTING\n",
-      "Session has expired\n"
+      "Connection dropped: socket connection error: Connection reset by peer\n",
+      "Connection dropped: socket connection error: Connection reset by peer\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n",
+      "Connection dropped: socket connection error: Connection refused\n"
      ]
     }
    ],
@@ -434,7 +428,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
