Updated Hive lecture

--- a/notebooks/07.Hive.ipynb
+++ b/notebooks/07.Hive.ipynb
@@ -47,28 +47,21 @@
     "### Клиент Python\n",
     "\n",
     "\n",
-    "Под `Windows` используйте рецепт отсюда https://stackoverflow.com/a/51023150 . Под `Linux` установите `libsasl`:\n",
-    "\n",
-    "```bash \n",
-    "sudo apt install libsasl2-dev\n",
-    "```\n",
-    "\n",
-    "Затем:\n",
     "```bash\n",
-    "python3 -m pip install -U PyHive[hive]\n",
+    "python3 -m pip install pyhive[hive_pure_sasl]\n",
     "```"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('John2', 2), ('Mike2', 2)]\n"
+      "[('John2', 1), ('Mike2', 1)]\n"
      ]
     }
    ],
@@ -78,8 +71,9 @@
     "    with conn.cursor() as cursor:        \n",
     "        cursor.execute('''\n",
     "            CREATE TABLE IF NOT EXISTS person (               \n",
-    "                           n STRING, \n",
-    "                           age INT)\n",
+    "                n STRING, \n",
+    "                age INT\n",
+    "            )\n",
     "            ''')\n",
     "        \n",
     "    with conn.cursor() as cursor:\n",
@@ -441,7 +435,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
