--- a/notebooks/06.PySpark.ipynb
+++ b/notebooks/06.PySpark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,19 +32,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "24/04/26 00:27:53 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sc = SparkContext(master='local[*]')\n",
     "#sc = SparkContext(master='spark://localhost:7077')"
@@ -59,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,13 +65,14 @@
        "[10, 37, 82, 145, 226, 325, 442, 577, 730, 901]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "rdd = sc.parallelize(range(1, 1000))\n",
+    "\n",
     "result = rdd.filter(lambda x: x % 3 == 0) \\\n",
     "            .map(lambda x: x**2) \\\n",
     "            .map(lambda x: x + 1) \\\n",
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +108,7 @@
        " '2008-01-10,0']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,25 +132,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2011, 1, 28, -1),\n",
-       " (2013, 10, 25, 8),\n",
-       " (2015, 8, 12, 27),\n",
-       " (2013, 7, 20, 15),\n",
-       " (2014, 10, 14, 6),\n",
-       " (2012, 10, 10, 7),\n",
-       " (2016, 10, 21, 2),\n",
-       " (2011, 1, 13, 0),\n",
-       " (2010, 9, 14, 17),\n",
-       " (2013, 6, 22, 25)]"
+       "[(2014, 3, 12, 5),\n",
+       " (2012, 2, 3, -17),\n",
+       " (2010, 10, 12, 4),\n",
+       " (2010, 5, 3, 9),\n",
+       " (2009, 6, 1, 25),\n",
+       " (2013, 3, 8, -6),\n",
+       " (2008, 1, 3, -11),\n",
+       " (2013, 7, 24, 18),\n",
+       " (2014, 6, 24, 13),\n",
+       " (2016, 1, 28, 5)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,9 +183,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -209,7 +207,7 @@
        " (2015, (1751, 92))]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +238,7 @@
        " (2016, 19.32608695652174)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +317,7 @@
     }
    ],
    "source": [
-    "from pyspark.sql.types import StructType, StructField, IntegerType, TimestampType\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType, TimestampType, FloatType\n",
     "\n",
     "# 1. Вручную описываем схему\n",
     "schema= StructType([\n",
@@ -338,6 +336,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import udf, pandas_udf\n",
+    "from typing import Iterator\n",
+    "import pyspark.sql.functions as F\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "\n",
+    "@pandas_udf(FloatType())\n",
+    "def our_agg_udf(x: pd.Series) -> float:\n",
+    "    return x.mean() + 2\n",
+    "\n",
+    "@udf(IntegerType())\n",
+    "def our_udf_bad(x: int) -> int:\n",
+    "    return 5 * x + 1\n",
+    "\n",
+    "@pandas_udf(IntegerType())\n",
+    "def our_udf(chunks: Iterator[pd.Series]) -> Iterator[pd.Series]: \n",
+    "    for chunk in chunks:  \n",
+    "        yield 5 * chunk + 1\n",
+    "\n",
+    "df_res = df.repartition(2) \\\n",
+    "           .select(F.year(df.date).alias(\"year\"), \"temp\") \\\n",
+    "           .groupby(\"year\") \\\n",
+    "           .agg(our_agg_udf(\"temp\").alias('year_avg')) "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -346,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -443,17 +473,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/alex/univ/venvs/venv_py/lib/python3.11/site-packages/pyspark/pandas/__init__.py:50: UserWarning: 'PYARROW_IGNORE_TIMEZONE' environment variable was not set. It is required to set this environment variable to '1' in both driver and executor sides if you use pyarrow>=2.0.0. pandas-on-Spark will set it for you but it does not work if there is a Spark context already launched.\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -518,7 +540,7 @@
        "463  2013    25"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -564,6 +586,13 @@
       "only showing top 20 rows\n",
       "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
     }
    ],
    "source": [
@@ -574,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -778,13 +807,6 @@
     "m_avg.withColumn('diff', F.abs(m_avg['temp'] - m_avg['month_avg'])) \\\n",
     "     .show(10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -805,7 +827,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
